# react-fastapi

backend/: .gitignore  .python-version  main.py  pyproject.toml
backend/core/: config.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: story.py
backend/schemas/: job.py  story.py
